export const snapshot = {};

snapshot[`Project Create Command - Help Text 1`] = `
stdout:
"
Usage: create

Writes: true     
Interactive: true

Description:

  Create a new Linear project; link it separately with initiative add-project

Options:

  -h, --help                             - Show this help.                                                                                         
  -n, --name              <name>         - Project name (required)                                                                                 
  -d, --description       <description>  - Project description (max 255 characters, enforced by Linear's API)                                      
  -f, --description-file  <path>         - Read UTF-8 project description from a file (- for stdin; still subject to the 255-character API limit)  
  --content               <content>      - Project overview markdown                                                                               
  --content-file          <path>         - Read UTF-8 project overview markdown from a file (- for stdin)                                          
  -t, --team              <team>         - Team UUID or key (repeatable; uses the configured default team when omitted)                            
  -l, --lead              <lead>         - Project lead (user UUID, username, name, email, 'self', or '@me')                                       
  -s, --status            <status>       - Status UUID or type (planned, started, paused, completed, canceled, backlog)                            
  --start-date            <date>         - Start date (YYYY-MM-DD)                                                                                 
  --target-date           <date>         - Target completion date (YYYY-MM-DD)                                                                     
  --priority              <priority>     - Priority (0/none, 1/urgent, 2/high, 3/medium, 4/low; names are case-insensitive)                        
  --label                 <label>        - Project label UUID or exact name. May be repeated.                                                      
  --member                <user>         - Project member (user UUID, username, name, email, 'self', or '@me'). May be repeated.                   
  --icon                  <icon>         - Project icon                                                                                            
  --color                 <color>        - Project color as a HEX string                                                                           
  -i, --interactive                      - Interactive mode (default if no flags provided)                                                         
  -j, --json                             - Output a JSON write result; the created project is in data.project                                      

"
stderr:
""
`;

snapshot[`Project Create Command - Description From File 1`] = `
stdout:
'{
  "ok": true,
  "effect": "applied",
  "data": {
    "success": true,
    "project": {
      "id": "550e8400-e29b-41d4-a716-446655440010",
      "slugId": "file-desc-project",
      "name": "File Desc Project",
      "url": "https://linear.app/test/project/file-desc-project"
    }
  }
}
'
stderr:
""
`;

snapshot[`Project Create Command - With JSON Output 1`] = `
stdout:
'{
  "ok": true,
  "effect": "applied",
  "data": {
    "success": true,
    "project": {
      "id": "550e8400-e29b-41d4-a716-446655440000",
      "slugId": "json-test-project",
      "name": "JSON Test Project",
      "url": "https://linear.app/test/project/json-test-project"
    }
  }
}
'
stderr:
""
`;

snapshot[`Project Create Command - With Content And Create Fields 1`] = `
stdout:
'{
  "ok": true,
  "effect": "applied",
  "data": {
    "success": true,
    "project": {
      "id": "550e8400-e29b-41d4-a716-446655440010",
      "slugId": "detailed-project",
      "name": "Detailed Project",
      "url": "https://linear.app/test/project/detailed-project"
    }
  }
}
'
stderr:
""
`;

snapshot[`Project Create Command - With Content File 1`] = `
stdout:
'{
  "ok": true,
  "effect": "applied",
  "data": {
    "success": true,
    "project": {
      "id": "550e8400-e29b-41d4-a716-446655440011",
      "slugId": "file-content-project",
      "name": "File Content Project",
      "url": "https://linear.app/test/project/file-content-project"
    }
  }
}
'
stderr:
""
`;
